# modern_page

./: pyproject.toml
my_custom_app/: hooks.py
my_custom_app/my_custom_app/www/: index.html
